# X-Macros-Examples

./: .travis.yml  .travis_build.sh  CMakeLists.txt  x_macros.md.in
1_colors/: CMakeLists.txt  colors.xdef  main.c
2_error_codes/: CMakeLists.txt  errors.xdef  main.c
